fix/kangaroo spacing

--- a/src/components/kangaroo/kangaroo.scss
+++ b/src/components/kangaroo/kangaroo.scss
@@ -74,7 +74,7 @@
   .kangaroo {
     .right-zone {
       text-align: right;
-      width:25%
+      width:33.33%
     }
   }
 
@@ -90,6 +90,7 @@
 
 //Laptop ------------------------------------------------------------------------------------------------
 @include media-breakpoint-up(xl) {
+  
 
 }
 
